--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./_nuxt/a.js"></script>
+  <script src="/pages/_nuxt/a.js"></script>
   <title>Document</title>
 </head>
 <body>
