--- a/200.html
+++ b/200.html
@@ -5,15 +5,15 @@
 <meta name="format-detection" content="telephone=no">
 <link rel="icon" type="image/x-icon" href="./favicon.ico">
 <script src="./jquery.js"></script>
-<link rel="stylesheet" href="/pages/_nuxt/entry.bwv9_EJg.css">
-<link rel="modulepreload" as="script" crossorigin href="/pages/_nuxt/BW3BjByU.js">
-<link rel="prefetch" as="style" href="/pages/_nuxt/error-404.C5CpQ1c-.css">
-<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/V7hxQycv.js">
-<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/QWzNYnu7.js">
-<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/SyUL_6zV.js">
-<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="style" href="/pages/_nuxt/error-500.BD4-3mgT.css">
-<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/CsG_fVhJ.js">
-<script type="module" src="/pages/_nuxt/BW3BjByU.js" crossorigin></script>
+<link rel="stylesheet" href="./_nuxt/entry.bwv9_EJg.css">
+<link rel="modulepreload" as="script" crossorigin href="./_nuxt/BW3BjByU.js">
+<link rel="prefetch" as="style" href="./_nuxt/error-404.C5CpQ1c-.css">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/V7hxQycv.js">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/QWzNYnu7.js">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/SyUL_6zV.js">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/DlAUqK2U.js">
+<link rel="prefetch" as="style" href="./_nuxt/error-500.BD4-3mgT.css">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/CsG_fVhJ.js">
+<script type="module" src="./_nuxt/BW3BjByU.js" crossorigin></script>
 <script id="unhead:payload" type="application/json">{"title":"AI亚健康检测"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"_errors":1,"serverRendered":2,"data":3,"state":4,"once":5},{},false,{},{},["Set"]]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/pages/",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"./",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
