--- a/200.html
+++ b/200.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html><html  lang="zh"><head><meta charset="utf-8">
+<!DOCTYPE html><html  lang="zh" data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>AI亚健康检测</title>
+<script src="./jquery.js"></script>
+<link rel="stylesheet" href="./_nuxt/entry.bwv9_EJg.css">
+<link rel="modulepreload" as="script" crossorigin href="./_nuxt/CLN4HNsM.js">
+<link rel="prefetch" as="style" href="./_nuxt/error-404.B6HcP7c8.css">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/Cg08kHUM.js">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/BI51er5Z.js">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/OdC70Sxj.js">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/DlAUqK2U.js">
+<link rel="prefetch" as="style" href="./_nuxt/error-500.hu1fNtQF.css">
+<link rel="prefetch" as="script" crossorigin href="./_nuxt/Cmze8eND.js">
 <meta name="description" content>
 <meta name="format-detection" content="telephone=no">
 <link rel="icon" type="image/x-icon" href="./favicon.ico">
-<script src="./jquery.js"></script>
-<link rel="stylesheet" href="./_nuxt/entry.bwv9_EJg.css">
-<link rel="modulepreload" as="script" crossorigin href="./_nuxt/BW3BjByU.js">
-<link rel="prefetch" as="style" href="./_nuxt/error-404.C5CpQ1c-.css">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/V7hxQycv.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/QWzNYnu7.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/SyUL_6zV.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="style" href="./_nuxt/error-500.BD4-3mgT.css">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/CsG_fVhJ.js">
-<script type="module" src="./_nuxt/BW3BjByU.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"AI亚健康检测"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"_errors":1,"serverRendered":2,"data":3,"state":4,"once":5},{},false,{},{},["Set"]]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"./",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="./_nuxt/CLN4HNsM.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"AI亚健康检测"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"serverRendered":1},false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"0dbe6503-3ce8-4e41-b249-23cdfb5313c5",buildAssetsDir:"/_nuxt/",cdnURL:"./"}}</script></body></html>
