--- a/404.html
+++ b/404.html
@@ -16,4 +16,4 @@
 <link rel="icon" type="image/x-icon" href="./favicon.ico">
 <script type="module" src="./_nuxt/CLN4HNsM.js" crossorigin></script>
 <script id="unhead:payload" type="application/json">{"title":"AI亚健康检测"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"serverRendered":1},false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"0dbe6503-3ce8-4e41-b249-23cdfb5313c5",buildAssetsDir:"/_nuxt/",cdnURL:"./"}}</script></body></html>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/pages/",buildId:"dc38483e-3f4d-4dca-b0fb-52f0f9fa41f5",buildAssetsDir:"/_nuxt/",cdnURL:"./"}}</script></body></html>
