--- a/404.html
+++ b/404.html
@@ -2,18 +2,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>AI亚健康检测</title>
 <script src="./jquery.js"></script>
-<link rel="stylesheet" href="./_nuxt/entry.bwv9_EJg.css">
-<link rel="modulepreload" as="script" crossorigin href="./_nuxt/CLN4HNsM.js">
-<link rel="prefetch" as="style" href="./_nuxt/error-404.B6HcP7c8.css">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/Cg08kHUM.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/BI51er5Z.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/OdC70Sxj.js">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/DlAUqK2U.js">
-<link rel="prefetch" as="style" href="./_nuxt/error-500.hu1fNtQF.css">
-<link rel="prefetch" as="script" crossorigin href="./_nuxt/Cmze8eND.js">
+<link rel="stylesheet" href="/pages/_nuxt/entry.bwv9_EJg.css">
+<link rel="modulepreload" as="script" crossorigin href="/pages/_nuxt/CLN4HNsM.js">
+<link rel="prefetch" as="style" href="/pages/_nuxt/error-404.B6HcP7c8.css">
+<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/Cg08kHUM.js">
+<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/BI51er5Z.js">
+<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/OdC70Sxj.js">
+<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/DlAUqK2U.js">
+<link rel="prefetch" as="style" href="/pages/_nuxt/error-500.hu1fNtQF.css">
+<link rel="prefetch" as="script" crossorigin href="/pages/_nuxt/Cmze8eND.js">
 <meta name="description" content>
 <meta name="format-detection" content="telephone=no">
 <link rel="icon" type="image/x-icon" href="./favicon.ico">
-<script type="module" src="./_nuxt/CLN4HNsM.js" crossorigin></script>
+<script type="module" src="/pages/_nuxt/CLN4HNsM.js" crossorigin></script>
 <script id="unhead:payload" type="application/json">{"title":"AI亚健康检测"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" id="__NUXT_DATA__" data-ssr="false">[{"serverRendered":1},false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/pages/",buildId:"dc38483e-3f4d-4dca-b0fb-52f0f9fa41f5",buildAssetsDir:"/_nuxt/",cdnURL:"./"}}</script></body></html>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/pages/",buildId:"2d3ecdba-cba7-4a77-bc42-9e5834216a17",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
